--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class = "question-wrapper">
             <h1 id = "welcome-title">Code Quiz</h1>
             <div class="list-wrap">
-                <p id = "welcome-text">
+                <p id = "content-text">
                 This quiz will involve a series of questions on the topic of the Web API. You will only be able to click once to select an answer to each question, so be careful! The more questions you get right, the higher your score. But don't dally, because the more time you have remaining when you're done with the quiz is added to your score! <br /><br />
 
                 Well are you ready? If so, click the 'start' button below or press 'enter' on your keyboard!
@@ -27,6 +27,7 @@
             </div>
             <button id="start-quiz">Start</button>
         </div>
+        <form id = "end-form"></form>
     </main>
 
     <script src="./assets/js/script.js"></script>
