Add timer and score penality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!--Link to the final screen or scoreboard-->
         <h2><a href="">View Scoreboard</a></h2>
         <!--Timer will go in here as well-->
+        <div class = "timer-box">Time Left: 75</div>
     </header>
 
     <!--Main Content section will host the welcome screen, quiz, and scoreboard-->
