--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Web API Code Quiz</title>
 </head>
 <body>
@@ -16,7 +17,38 @@
 
     <!--Main Content section will host the welcome screen, quiz, and scoreboard-->
     <main class = "page-content">
-        <div class = "question-wrapper">
+        <section id = "welcome-panel" class = "">
+            <h1>Code Quiz</h1>
+                <p>
+                    This quiz will involve a series of questions on the topic of the Web API. You will only be able to click once to select an answer to each question, so be careful! The more questions you get right, the higher your score. But don't dally, because the more time you have remaining when you're done with the quiz is added to your score! <br /><br />
+
+                    Well are you ready? If so, click the 'start' button below or press 'enter' on your keyboard!
+                </p>
+            <button id="start-quiz">Start</button>
+        </section>
+
+        <section id = "question-panel" class = "hide">
+            <h1 id = "question-title">Temp</h1>
+            <ol id = "answer-list"></ol>
+        </section>
+
+        <section id = "score-submit-panel" class = "hide">
+            <div class = "completion-text"> 
+                <h1>Quiz Complete!</h1>
+                <p>Congratulations, you're done!</p>
+            </div>
+            <form id = "end-form">
+                <input type = "text" name = "initials" placeholder = "Please enter your initials">
+                <button type = "submit" id="submit-initials-btn">Submit</button>
+            </form>
+        </section>
+
+        <section id = "highscore-panel" class = "hide">
+            <h1>Hiscores:</h1>
+            <ol id = "highscore-list"></ol>
+        </section>
+
+        <!-- <div class = "question-wrapper">
             <h1 id = "welcome-title">Code Quiz</h1>
             <div class="list-wrap">
                 <p id = "content-text">
@@ -28,7 +60,7 @@
             </div>
             <button id="start-quiz">Start</button>
         </div>
-        <form id = "end-form"></form>
+        <form id = "end-form"></form> -->
     </main>
 
     <script src="./assets/js/script.js"></script>
