Add functionality to view scoreboard text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <!--Link to the final screen or scoreboard-->
-        <h2><a href="">View Scoreboard</a></h2>
+        <h2 id = "scoreboard">View Scoreboard</h2>
         <!--Timer will go in here as well-->
         <div class = "timer-box">Time Left: 60</div>
     </header>
