--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button id="start-btn" class = "btn">Start</button>
         </section>
 
-        <section id = "question-panel" class = "panel">
+        <section id = "question-panel" class = "hide">
             <h1 id = "question-title"></h1>
             <ol id = "answer-list"></ol>
         </section>
@@ -53,6 +53,7 @@
                 <button id = "clear-btn" class = "btn">Clear Scores</button>
             </div>
         </section>
+        <div id = "feedback" class = ""></div>
     </main>
 
     <script src="./assets/js/script.js"></script>
