Update script to update timer more accurately on wrong scores and display timer dynamically

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--Link to the final screen or scoreboard-->
         <h2 id = "scoreboard">View Scoreboard</h2>
         <!--Timer will go in here as well-->
-        <div id = "timer-box">Time Left: 60</div>
+        <div id = "timer-box"></div>
     </header>
 
     <!--Main Content section will host the welcome screen, quiz, and scoreboard-->
